Added connection to Raspberry server. Saves and fetches images on rasp-server and starts stream upon request.

--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -78,10 +78,10 @@ p {
   <div class="row">
     <div class="col-8">
       <div class="player">
-        <p class="videoText">No stream being sent at the moment</p>
+        <p class="videoText show">No stream being sent at the moment</p>
         <img src="linnaeus.asuscomm.com:8081/stream.mjpg" class="hide">
       </div>
-      <button type="button" class="btn btn-primary ">Request Video Stream</button>
+      <button type="button" class="btn btn-primary streamBtn">Request Video Stream</button>
       <div class="container events">
 
         <h2>Recent events</h2>
