Added CSP header with allowed resources. Removed inline styling to import CSS files instead.

--- a/views/home/register.hbs
+++ b/views/home/register.hbs
@@ -1,6 +1,5 @@
-<style>
-@import "/assets/css/register.css";
-</style>
+<link rel="stylesheet" href="/assets/css/register.css">
+
 <div class="signup-form">
     <form action="/register" method="post">
 		<h2>Sign Up</h2>
