--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -1,33 +1,8 @@
-<style>
-  .img {
-    width: 18px;
-  }
-  .username {
-    font-size: 13px;
-    padding-left: 1em;
-    display: inline;
-  }
-  .space {
-    margin: 0.7em;
-  }
-  .margin {
-    margin: 0em;
-    margin-left: 0.8em;
-  }
-  .notis {
-    margin-top: 0.5em;
-  }
-  .size {
-    width: 350px;
-    max-height: 200px;
-    min-height: 80px;
-    background-color: rgb(179, 179, 179);
-    overflow-y: auto;
-  }
-   .show {
-  opacity: 1;
-}
-</style>
+{{!-- <style>
+  @import "/assets/css/navbar.css";
+</style> --}}
+<link rel="stylesheet" href="/assets/css/navbar.css">
+
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <a href="/" class="navbar-brand">The Watcher</a>
     <ul class="navbar-nav ml-auto">
