--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -1,6 +1,10 @@
 <style>
-  .img {
-    width: 18px;
+  .img2 {
+    width: 22px;
+    background-color: rgb(211, 208, 208);
+  }
+  .img2 p {
+    display: inline-block;
   }
   .username {
     font-size: 13px;
@@ -34,7 +38,7 @@
       {{#if loggedIn}}
           <li class="nav-item dropdown ">
             <a class="nav-link text-light" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <div class="dropdown-toggle"><img src="" class="img"><p class="username">{{navBar.username}}</p></div>
+              <div class="dropdown-toggle"><img src="/assets/images/profile-user.svg" class="img2"><p class="username">{{navBar.username}}</p></div>
             </a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="#">Lol 1</a>
