--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -31,48 +31,16 @@
           </div>
           {{/each}}
       </div>
+      {{#if events}}
       <form action="/profile/{{navBar.username}}/delete" method="POST">
          <button type="submit" class="btn btn-danger btn-sm float-right">Clear history</button>
       </form>
+      {{/if}}
     </div>
     <div class="col-4 lol">
       <div aria-live="polite" aria-atomic="true"  data-autohide="false">
         <!-- Position it -->
-        <div class="notis">
-
-        <!-- Then put toasts within -->
-        {{!-- <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
-          <div class="toast-header">
-            <strong class="mr-auto">Motion detected</strong>
-            <small class="text-muted">just now</small>
-            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close" >
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="toast-body">
-            <p>Motion detected from <span class="italics">LoraDeviceName</span></p>
-            <p>Image taken from raspbery pi at <span class="italics">2:55 pm today</span></p>
-            <img class="img" src="https://scontent.fbma4-1.fna.fbcdn.net/v/t1.0-9/10940480_1375253096119993_7246019023456750357_n.jpg?_nc_cat=101&_nc_ohc=sQlQyiDJGsYAX_FDhIE&_nc_ht=scontent.fbma4-1.fna&oh=5904c5b85b1ec2fcb88098fce9b05f72&oe=5F01FAEC">
-          </div>
-        </div> --}}
-
-        
-
-        {{!-- <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
-          <div class="toast-header">
-            <strong class="mr-auto">Motion detected</strong>
-            <small class="text-muted">2 seconds ago</small>
-            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="toast-body">
-            <img class="img" src="https://scontent.fbma4-1.fna.fbcdn.net/v/t1.0-9/10940480_1375253096119993_7246019023456750357_n.jpg?_nc_cat=101&_nc_ohc=sQlQyiDJGsYAX_FDhIE&_nc_ht=scontent.fbma4-1.fna&oh=5904c5b85b1ec2fcb88098fce9b05f72&oe=5F01FAEC">
-            <p>Motion detected from <span class="italics">LoraDeviceName</span></p>
-            <p>Image taken from raspbery pi at <span class="italics">2:55 pm today</span></p>
-          </div>
-        </div> --}}
-      </div>
+        <div class="notis"></div>
     </div>
   </div>
 </div>
