--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -5,7 +5,7 @@
       {{#if loggedIn}}
           <li class="nav-item dropdown ">
             <a class="nav-link text-light" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <div class="dropdown-toggle"><img src="/assets/images/profile-user.svg" class="img2"><p class="username">{{navBar.username}}</p></div>
+              <div class="dropdown-toggle"><img src="/assets/images/profile-user.svg" class="profile-img"><p class="username">{{navBar.username}}</p></div>
             </a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="#">LoRa-device-1</a>
