--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -6,6 +6,49 @@
   .toast-body {
     cursor: pointer;
   }
+
+  .events{
+    display: flex;
+    flex-direction: column-reverse;
+    max-height: 400px;
+    overflow-y: auto;
+  }
+
+  #lightbox {
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .8);
+  }
+
+  .playText {
+    color: white;
+    text-align: center;
+    position: relative;
+    bottom: 240px;
+  }
+
+  #lightbox img {
+    max-width: 90%;
+    max-height: 80%;
+    padding: 4px;
+    background-color: black;
+    border: 2px solid white;
+    display: block;
+    margin: 7em auto;
+    margin-bottom: 0;
+  }
+
+  .img4 {
+    max-width: 90%;
+    max-height: 80%;
+    padding: 4px;
+    background-color: black;
+    border: 2px solid white;
+    transition: 15s;
+  }
   
   .clr {
     display: block;
