Added favicon and other minor changes.

--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/assets/css/navbar.css">
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <a href="/" class="navbar-brand">The Watcher</a>
+    <a href="/" class="navbar-brand">LoRa Surveillance System</a>
     <ul class="navbar-nav ml-auto">
       {{#if loggedIn}}
           <li class="nav-item dropdown ">
