--- a/public/assets/css/500.css
+++ b/public/assets/css/500.css
@@ -1,3 +1,7 @@
+/**
+Css template gotten from https://freefrontend.com/500-error-page-html-templates/
+*/
+
 :root {
   --main-color: #eaeaea;
   --stroke-color: black;
