--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -19,7 +19,7 @@
         </div>
       <div class="container">
 
-        <h2>Recent events</h2>
+        <h2>Past events</h2>
           <div class="row bg-light p-3 ">
             <div class="col-md-8">
               <h5 class="text-secondary">Event</h5>
