Added comments, fixed indentations in html, removed Findlay 'lols', added icon at login.

--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -12,10 +12,12 @@
     font-size: 3.5rem;
   }
 }
+
 body {
 background-color: #f5f5f5;
 }
-.lol {
+
+.contain-login {
 display: -ms-flexbox;
 display: flex;
 -ms-flex-align: center;
@@ -33,9 +35,11 @@ margin: auto;
 .form-signin .checkbox {
 font-weight: 400;
 }
+
 .down {
   margin-top: 1em;
 }
+
 .form-signin .form-control {
 position: relative;
 box-sizing: border-box;
@@ -43,14 +47,17 @@ height: auto;
 padding: 10px;
 font-size: 16px;
 }
+
 .form-signin .form-control:focus {
 z-index: 2;
 }
+
 .form-signin input[type="email"] {
 margin-bottom: -1px;
 border-bottom-right-radius: 0;
 border-bottom-left-radius: 0;
 }
+
 .form-signin input[type="password"] {
 margin-bottom: 10px;
 border-top-left-radius: 0;
