--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,9 +1,10 @@
 <link rel="stylesheet" href="/assets/css/login.css">
 
-<div class="text-center lol">
+<div class="text-center contain-login">
   <form class="form-signin" action="/login" method="POST">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
-    <img class="mb-4" src="https://getbootstrap.com/docs/4.4/assets/brand/bootstrap-solid.svg" alt="boostrap logo" width="72" height="72">
+    {{!-- <img class="mb-4" src="https://getbootstrap.com/docs/4.4/assets/brand/bootstrap-solid.svg" alt="boostrap logo" width="72" height="72"> --}}
+    <img class="mb-4" src="/assets/images/icon_opacity.png" alt="boostrap logo" width="72" height="72">
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <label for="inputEmail" class="sr-only">Email address</label>
     <input type="email" id="inputEmail" name="username" class="form-control" placeholder="Email address" required autofocus>
@@ -15,7 +16,6 @@
       </label>
     </div>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-    <div class="down">New? <a href="/register" class="black">Register here</a></div>
-    <p class="mt-5 mb-3 text-muted">&copy; 2020</p>
+    <p class="mt-5 mb-3 text-muted">&copy; LoRa Surveillance System crew - 2020</p>
   </form>
 </div>
