--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -4,7 +4,7 @@
   <form class="form-signin" action="/login" method="POST">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
     {{!-- <img class="mb-4" src="https://getbootstrap.com/docs/4.4/assets/brand/bootstrap-solid.svg" alt="boostrap logo" width="72" height="72"> --}}
-    <img class="mb-4" src="/assets/images/icon_opacity.png" alt="boostrap logo" width="72" height="72">
+    <img class="mb-4" src="/assets/images/icon_opacity.png" alt="LoRa Surveillance System logo" width="72" height="72">
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <label for="inputEmail" class="sr-only">Email address</label>
     <input type="email" id="inputEmail" name="username" class="form-control" placeholder="Email address" required autofocus>
