--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -12,6 +12,10 @@
     cursor: pointer;
   }
 
+  .show {
+    border-radius: 1%;
+  }
+
   .but {
     margin-right: 1em;
   }
@@ -117,8 +121,8 @@
   }
 
   .playerOn {
-    border: 4px solid rgb(255, 10, 10);
-    border-radius: 4%;
+    border: 8px solid #00ff00;
+    border-radius: 2%;
   }
   
   .notis {
