--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -117,8 +117,12 @@
   }
 
   .playerOn {
-    border: 4px solid rgb(255, 10, 10);
-    border-radius: 4%;
+    border: 8px solid #00ff00;
+    border-radius: 2%;
+  }
+
+  .show{
+    border-radius: 1%;
   }
   
   .notis {
