--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -9,7 +9,7 @@
       </div>
       <button type="button" class="btn btn-primary streamBtn">Request Video Stream</button>
     </div>
-    <div class="col-4 lol">
+    <div class="col-4 col-notis">
       <div aria-live="polite" aria-atomic="true"  data-autohide="false">
         <!-- Position it -->
         <div class="notis"></div>
